--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Home
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
   <p>
-  I am a senior student majoring in Computer Science and Technology in Nankai University, expected to graduate in 2023 and will join 
-  Professor <a href="https://sites.google.com/umich.edu/yujunyan/home">Yujun Yan</a>'s group in Dartmouthin  2023 Fall.
-  My research interest lies in Natural Language Processing, Data Mining, and Representation Learning. I also interested in Trust-Worthy AI. 
+  Xuyuan Liu a senior student majoring in Computer Science and Technology in Nankai University, expected to graduate in 2023 and  join 
+  Professor <a href="https://sites.google.com/umich.edu/yujunyan/home">Yujun Yan</a>'s group in Dartmouthin in 2023 Fall.
+  His research interest lies in graph-based ML model, and NLP. I also interested in Trust-Worthy AI. 
   </p> 
 </div>
 
