--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
   <p>
   Xuyuan Liu a senior student majoring in Computer Science and Technology in Nankai University, expected to graduate in 2023 and  join 
   Professor <a href="https://sites.google.com/umich.edu/yujunyan/home">Yujun Yan</a>'s group in Dartmouthin in 2023 Fall.
-  His research interest lies in graph-based ML model, and NLP. I also interested in Trust-Worthy AI. 
+  His research interest lies in graph-based ML model and its application on NLP. I also interested in Trust-Worthy AI. 
   </p> 
 </div>
 
