--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Home
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
   <p>
-  Xuyuan Liu a senior student majoring in Computer Science and Technology in Nankai University, expected to graduate in 2023 and  join 
-  Professor <a href="https://sites.google.com/umich.edu/yujunyan/home">Yujun Yan</a>'s group in Dartmouthin in 2023 Fall.
-  His research interest lies in graph-based ML model and its application on NLP. I also interested in Trust-Worthy AI. 
+  I am a senior student majoring in Computer Science and Technology at Nankai University, expected to graduate in 2023 and  join 
+  Professor <a href="https://sites.google.com/umich.edu/yujunyan/home">Yujun Yan</a>'s group in Dartmouthin  this Fall.
+  My research interest lies in graph-based machine learning models and their applications in NLP. I am also interested in Trustworthy AI. 
   </p> 
 </div>
 
