modify some typo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
   <h4>Bio</h4>
   <p>
   I am a senior student majoring in Computer Science and Technology at Nankai University, expected to graduate in 2023 and  join 
-  Professor <a href="https://sites.google.com/umich.edu/yujunyan/home">Yujun Yan</a>'s group in Dartmouthin  this Fall.
+  Professor <a href="https://sites.google.com/umich.edu/yujunyan/home">Yujun Yan</a>'s group in Dartmouth this Fall.
   My research interest lies in graph-based machine learning models and their applications in NLP. I am also interested in Trustworthy AI. 
   </p> 
 </div>
