--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@ title: Home
 <!-- ========== BIO ========== -->
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
-  <p>
-  I am a senior student majoring in Computer Science and Technology at Nankai University, expected to graduate in 2023 and  join 
-  Professor <a href="https://sites.google.com/umich.edu/yujunyan/home">Yujun Yan</a>'s group in Dartmouth this Fall.
-  My research interest lies in graph-based machine learning models and their applications in NLP. I am also interested in Trustworthy AI. 
-  </p> 
+  
+    <p>
+      I am a first-year PhD student at the <a href="https://web.cs.dartmouth.edu/">Department of Computer Science,</a>  <a href="https://home.dartmouth.edu/">Dartmouth College</a>, 
+      advised by Professor <a href="https://sites.google.com/umich.edu/yujunyan/home">Yujun Yan</a>.
+      Previously, I obtained my B.Eng degree in Computer Science from Nankai University, where I worked on Knowledge-grounded NLP Systems advised by
+       <a href="https://bigdata.nankai.edu.cn/yangzl/list.htm">Prof. Zhenglu Yang</a>.
+    </p> 
+    <p>
+      My current research interests lie in the area of <strong>graph-based machine learning</strong>, especially the <strong>expressive power</strong> and <strong>generalizability</strong> 
+      of Graph Neural Networks. I am also interested in explainable ML.
+    </p>
+    
 </div>
 
 
