--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
   
     <p>
       I am a first-year PhD student at the <a href="https://web.cs.dartmouth.edu/">Department of Computer Science,</a>  <a href="https://home.dartmouth.edu/">Dartmouth College</a>, 
-      advised by Professor <a href="https://sites.google.com/umich.edu/yujunyan/home">Yujun Yan</a>.
+      advised by  <a href="https://sites.google.com/umich.edu/yujunyan/home">Prof. Yujun Yan</a>.
       Previously, I obtained my B.Eng degree in Computer Science from Nankai University, where I worked on Knowledge-grounded NLP Systems advised by
        <a href="https://bigdata.nankai.edu.cn/yangzl/list.htm">Prof. Zhenglu Yang</a>.
     </p> 
