--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@ title: Home
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
   
-    <p>
-      I am a first-year PhD student at the <a href="https://web.cs.dartmouth.edu/">Department of Computer Science,</a>  <a href="https://home.dartmouth.edu/">Dartmouth College</a>, 
-      advised by  <a href="https://sites.google.com/umich.edu/yujunyan/home">Prof. Yujun Yan</a>.
-      Previously, I obtained my B.Eng degree in Computer Science from Nankai University, where I worked on Knowledge-grounded NLP Systems advised by
-       <a href="https://bigdata.nankai.edu.cn/yangzl/list.htm">Prof. Zhenglu Yang</a>.
-    </p> 
-    <p>
-      My current research interests lie in the area of <strong>graph-based machine learning</strong>, especially the <strong>expressive power</strong> and <strong>generalizability</strong> 
-      of Graph Neural Networks. I am also interested in explainable ML.
-    </p>
+  <p>
+    I am a first-year PhD student in the <a href="https://web.cs.dartmouth.edu/">Department of Computer Science</a> at <a href="https://home.dartmouth.edu/">Dartmouth College</a>, 
+    advised by <a href="https://sites.google.com/umich.edu/yujunyan/home">Prof. Yujun Yan</a>.
+    Previously, I obtained my B.Eng. degree in Computer Science from Nankai University, where I worked on knowledge-grounded NLP systems under the guidance of
+    <a href="https://bigdata.nankai.edu.cn/yangzl/list.htm">Prof. Zhenglu Yang</a>.
+  </p>
+  <p>
+    My current research interests lie in the area of <strong>graph-based machine learning</strong>, particularly in the <strong>expressive power</strong> and <strong>generalizability</strong> 
+    of Graph Neural Networks. I am also interested in how to augment Language Models with external knowledge to enhance their trustworthiness.
+  </p>
     
 </div>
 
