--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ title: Home
     I am a  Ph.D. student in the <a href="https://web.cs.dartmouth.edu/">Department of Computer Science</a> at <a href="https://home.dartmouth.edu/">Dartmouth College</a>, 
     advised by <a href="https://sites.google.com/umich.edu/yujunyan/home">Prof. Yujun Yan</a>.
     Previously, I obtained my Bachelor's degree in Computer Science from Nankai University, where I worked on knowledge-grounded NLP systems under the guidance of
-    <a href="https://bigdata.nankai.edu.cn/yangzl/list.htm">Prof. Zhenglu Yang</a>.
+    <a href="https://scholar.google.com/citations?user=u5LzNHcAAAAJ&hl=ja">Prof. Zhenglu Yang</a>.
   </p>
   <p>
     My research is primarily focused on the area of <strong>Consistent Learning</strong> , aiming to unveil how different modules within the same neural networks can operate under consistent principles.
-    Additionally, I am also interested in <strong>Mechanistic Interpretability</strong>.
+    Additionally, I am also interested in <strong>Mechanistic Interpretability</strong> on language model.
   </p>
     
 </div>
